[project]
name = "stock-price-sales-forecasting-engine"
version = "2.0.0"
description = "Enterprise AI forecasting platform combining deep learning, gradient boosting, and generative AI for stock price and sales prediction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | datasets
  | ml/model_registry
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "venv", "build", "dist", "datasets", "ml/model_registry"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
exclude = ["tests/", "ml/experiments/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
